# spectromancer.py

./: MANIFEST.in  README.md  pyproject.toml  spectromancer.py
observations/: obsfile.csv
spectromancer/: __init__.py  __main__.py  spectromancer.py
