[build-system]
requires = ["setuptools>=61.0", "corv", "numpy", "astropy"]
build-backend = "setuptools.build_meta"

[project]
name = "spectromancer"
version = "0.1"
authors = [
  { name="Stefan Arseneau", email="arseneau@bu.edu"}
]
description = "spectromancer.py is a wizard for managing MAGE spectrum observations of white dwarfs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/stefanarseneau/spectromancer.py"
Issues = "https://github.com/stefanarseneau/spectromancer.py/issues"
