[build-system]
requires = ["setuptools>=61.0", "corv", "numpy", "astropy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spectromancer*"]
exclude = ["observations*"]

[project]
name = "spectromancer"
version = "0.1.8"
authors = [
  { name="Stefan Arseneau", email="arseneau@bu.edu"}
]
description = "spectromancer.py is a wizard for managing MAGE spectrum observations of white dwarfs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
hello-world = "timmins:hello_world"

[project.urls]
Homepage = "https://github.com/stefanarseneau/spectromancer.py"
Issues = "https://github.com/stefanarseneau/spectromancer.py/issues"
